fix: ignore malformed custom JVM arguments [skip ci]